# pr-agent-rs

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml
settings/: configuration.toml  pr_description_prompts.toml  pr_help_prompts.toml  pr_reviewer_prompts.toml
settings/code_suggestions/: pr_code_suggestions_prompts.toml
src/: cli.rs  error.rs  lib.rs  main.rs  util.rs
src/ai/: mod.rs  openai.rs  token.rs  types.rs
src/config/: loader.rs  mod.rs  prompts.rs  types.rs
src/git/: github.rs  mod.rs  types.rs  url_parser.rs
src/output/: describe_formatter.rs  improve_formatter.rs  markdown.rs  mod.rs  review_formatter.rs  yaml_parser.rs
src/processing/: compression.rs  diff.rs  filter.rs  mod.rs  patch.rs
src/server/: mod.rs  push_dedup.rs  webhook.rs
src/template/: render.rs
src/testing/: fixtures.rs  mock_ai.rs  mock_git.rs  mod.rs
src/tools/: ask.rs  ask_line.rs  describe.rs  image.rs  improve.rs  mod.rs  review.rs
